# go-slow-server

./: .env.example  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  tailwind.config.js
dashboard/: urls.py  views.py
dgs/: apps.py  connectors.py  models.py  urls.py  views.py
dgs/migrations/: 0001_initial.py  0002_initial.py  0003_dgsgame_handicap_dgsgame_my_time_remaining_and_more.py  0004_dgsgame_my_turn.py
gss/: asgi.py  settings.py  urls.py  wsgi.py
ogs/: apps.py  connectors.py  models.py  urls.py  views.py
ogs/migrations/: 0001_initial.py  0002_ogsuser_token_expiry.py  0003_ogsgame_moves.py
sgs/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: app.css
templates/: dashboard.html  dgs_dashboard.html  login.html
templates/partials/: base.html
users/: models.py
users/migrations/: 0001_initial.py
